Bug 1384279 - Oculus Rift Core 2.0 Adjustments r=daoshengmu - Add pref to enable the ovrInit_Invisible flag for Oculus sessions, enabled by default. - Ensure that the Oculus library is unloaded every time it is uninitialized,   improving reliability of exiting and returning to WebVR.

MozReview-Commit-ID: 6VCugCJ2dUz