gfx/vr/gfxVROculus.cpp
@@ -309,18 +309,16 @@ VROculusSession::StopPresentation()
 VROculusSession::~VROculusSession()
 {
   mSubmitThread = nullptr;
-  Uninitialize(true);
+  Uninitialize();
 }
 
 void
-VROculusSession::Uninitialize(bool aUnloadLib)
+VROculusSession::Uninitialize()
 {
   StopRendering();
   StopSession();
   StopLib();
-  if (aUnloadLib) {
-    UnloadOvrLib();
-  }
+  UnloadOvrLib();
 }
 
 void
@@ -366,12 +364,15 @@ VROculusSession::Refresh(bool aForceRefresh)
   }
 
   if (!mRequestTracking) {
-    Uninitialize(true);
+    Uninitialize();
     return;
   }
 
   ovrInitFlags flags = (ovrInitFlags)(ovrInit_RequestVersion | ovrInit_MixedRendering);
   bool bInvisible = true;
+  if (!gfxPrefs::VROculusInvisibleEnabled()) {
+    bInvisible = false;
+  }
   if (mRequestPresentation) {
     bInvisible = false;
   } else if (!mLastPresentationEnd.IsNull()) {
@@ -417,14 +418,14 @@ VROculusSession::Refresh(bool aForceRefresh)
   }
 
   if (mInitFlags != flags) {
-    Uninitialize(false);
+    Uninitialize();
   }
 
   if(!Initialize(flags)) {
     // If we fail to initialize, ensure the Oculus libraries
     // are unloaded, as we can't poll for ovrSessionStatus::ShouldQuit
     // without an active ovrSession.
-    Uninitialize(true);
+    Uninitialize();
   }
 
   if (mSession) {
@@ -434,7 +435,7 @@ VROculusSession::Refresh(bool aForceRefresh)
       mIsMounted = status.HmdMounted;
       if (status.ShouldQuit) {
         mLastShouldQuit = TimeStamp::Now();
-        Uninitialize(true);
+        Uninitialize();
       }
     } else {
       mIsConnected = false;
